--- a/app/src/main/res/layout/fragment_invest.xml
+++ b/app/src/main/res/layout/fragment_invest.xml
@@ -296,6 +296,17 @@
                     android:scaleY="0.6"
                     android:visibility="@{vm.loadMore?View.VISIBLE:View.GONE}" />
 
+                <TextView
+                    android:id="@+id/tvNoDataFound"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/default_space"
+                    android:layout_marginBottom="@dimen/default_space"
+                    android:gravity="center"
+                    android:padding="@dimen/default_space"
+                    android:text="@string/no_data_found"
+                    android:textColor="@color/black"
+                    android:visibility="@{vm.tvNoDataFoundVisibility}" />
             </LinearLayout>
 
         </android.support.v4.widget.NestedScrollView>
