Fixes issues raise by QA.

--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -62,7 +62,7 @@
             android:layout_marginTop="@dimen/space_32"
             android:layout_marginEnd="@dimen/space_32"
             android:background="@drawable/shape_edt_white_round"
-            android:hint="@string/email_address"
+            android:hint="@string/email_id_or_mobile_number"
             android:inputType="textEmailAddress"
             android:maxLines="1"
             android:paddingStart="@dimen/default_space"
