--- a/app/src/main/res/layout/activity_otp_verification.xml
+++ b/app/src/main/res/layout/activity_otp_verification.xml
@@ -64,7 +64,7 @@
             android:layout_marginEnd="@dimen/space_32"
             android:background="@drawable/shape_edt_white_round"
             android:hint="@string/enter_otp"
-            android:inputType="number"
+            android:inputType="numberPassword"
             android:maxLength="6"
             android:maxLines="1"
             android:paddingStart="@dimen/default_space"
