--- a/app/src/main/res/layout/fragment_transaction_confirm.xml
+++ b/app/src/main/res/layout/fragment_transaction_confirm.xml
@@ -74,8 +74,8 @@
                     android:layout_marginTop="@dimen/space_8"
                     android:layout_marginEnd="@dimen/_8sdp"
                     android:layout_marginBottom="@dimen/space_8"
-                    android:gravity="center"
                     android:fontFamily="@font/lato_semibold"
+                    android:gravity="center"
                     android:text="@{vm.isFailed?@string/failed_transaction_msg:@string/your_purchase_request_has_been_received}"
                     android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                     android:textColor="@color/darker_gray"
@@ -115,8 +115,7 @@
                 android:fontFamily="@font/lato_bold"
                 android:text="@string/go_to_unpaid_transactions"
                 android:textColor="@color/white"
-                android:visibility="gone"
-                tools:visibility="visible" />
+                android:visibility="visible" />
 
         </LinearLayout>
 
