- Add my Sip option to account tab. - Remove stop from port folio screen.

--- a/app/src/main/res/drawable/ic_my_profile.xml
+++ b/app/src/main/res/drawable/ic_my_profile.xml
@@ -5,7 +5,7 @@
     android:viewportHeight="80">
   <path
       android:pathData="M40,40m-40,0a40,40 0,1 1,80 0a40,40 0,1 1,-80 0"
-      android:fillColor="#69C5C5"/>
+      android:fillColor="#FFCA29"/>
   <path
       android:pathData="M39.89,61.51c-4.44,0 -8.58,-0.63 -11.66,-1.77c-4.87,-1.8 -5.89,-4.39 -5.89,-6.24c0,-7.99 5.26,-14.77 12.47,-17c-2.75,-1.73 -4.59,-4.78 -4.59,-8.26c0,-5.37 4.39,-9.75 9.78,-9.75c5.39,0 9.78,4.37 9.78,9.75c0,3.47 -1.83,6.53 -4.59,8.26c7.21,2.24 12.47,9.01 12.47,17C57.66,59.03 48.74,61.51 39.89,61.51zM40,38.11c-8.42,0 -15.26,6.9 -15.26,15.39c0,3.2 6.51,5.61 15.15,5.61c8.62,0 15.37,-2.46 15.37,-5.61C55.26,45.01 48.42,38.11 40,38.11zM40,20.89c-4.07,0 -7.38,3.29 -7.38,7.35c0,4.05 3.31,7.35 7.38,7.35c4.07,0 7.38,-3.29 7.38,-7.35C47.38,24.19 44.07,20.89 40,20.89z"
       android:fillColor="#FFFFFF"/>
