--- a/app/src/main/res/layout/row_goal_based_investment_details_list_item.xml
+++ b/app/src/main/res/layout/row_goal_based_investment_details_list_item.xml
@@ -245,7 +245,7 @@
                 android:text="@string/stop"
                 android:textColor="@color/colorAccent"
                 android:textSize="@dimen/_9sdp"
-                android:visibility="@{investment.isSIP?View.VISIBLE:View.GONE}" />
+                android:visibility="gone" />
 
             <TextView
                 android:id="@+id/tvApplyForDebitCart"
