--- a/app/src/main/res/drawable/ic_change_password.xml
+++ b/app/src/main/res/drawable/ic_change_password.xml
@@ -5,7 +5,7 @@
     android:viewportHeight="80">
   <path
       android:pathData="M40,40m-40,0a40,40 0,1 1,80 0a40,40 0,1 1,-80 0"
-      android:fillColor="#FFCA29"/>
+      android:fillColor="#A04E9D"/>
   <path
       android:pathData="M53.46,31.94H49.9v-4.1c0,-5.46 -4.44,-9.9 -9.9,-9.9s-9.9,4.44 -9.9,9.9v4.1h-3.56c-2.29,0 -4.15,1.86 -4.15,4.15v21.82c0,2.29 1.86,4.15 4.15,4.15h26.91c2.29,0 4.15,-1.86 4.15,-4.15V36.09C57.61,33.8 55.74,31.94 53.46,31.94zM32.5,27.84c0,-4.13 3.36,-7.5 7.5,-7.5s7.5,3.36 7.5,7.5v4.1h-15V27.84zM55.21,57.91c0,0.97 -0.79,1.75 -1.75,1.75H26.55c-0.97,0 -1.75,-0.79 -1.75,-1.75V36.09c0,-0.97 0.79,-1.75 1.75,-1.75h3.56h19.8h3.56c0.97,0 1.75,0.79 1.75,1.75V57.91z"
       android:fillColor="#FFFFFF"/>
