--- a/app/src/main/res/layout/row_tarrakki_zyaada_investment_list_item.xml
+++ b/app/src/main/res/layout/row_tarrakki_zyaada_investment_list_item.xml
@@ -250,7 +250,7 @@
                 android:text="@string/stop"
                 android:textSize="@dimen/_9sdp"
                 android:textColor="@color/colorAccent"
-                android:visibility="@{investment.isSIP?View.VISIBLE:View.GONE}" />
+                android:visibility="gone" />
 
             <TextView
                 android:id="@+id/tvApplyForDebitCart"
