- Create Verify document screen and api implementation for add bank account

--- a/app/src/main/res/drawable/dr_bg_payment_button.xml
+++ b/app/src/main/res/drawable/dr_bg_payment_button.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_checked="true" android:drawable="@drawable/dr_btn_payment_bg"/>
-    <item android:drawable="@drawable/dr_bg_payment_transparent"/>
+    <item android:drawable="@drawable/dr_btn_payment_bg" android:state_checked="true" />
+    <item android:drawable="@drawable/dr_bg_payment_transparent" />
 </selector>
